--- a/src/main/resources/templates/refer.html
+++ b/src/main/resources/templates/refer.html
@@ -265,7 +265,7 @@
     
     <div class="reward-info">
         <h3><i class="fas fa-gift"></i> Your Rewards</h3>
-        <p>For every friend who joins using your link, you'll earn <strong>100 points</strong> when they complete their first transaction!</p>
+        <p>For every friend who joins using your link, you'll earn <strong>100 rupees off</strong> when they complete their first transaction!</p>
     </div>
 
     <div th:if="${#lists.isEmpty(referredUsers)}">
