Added ExtraFee and Cancel Seller Pending Amount

--- a/src/main/resources/templates/buyPNRTickets.html
+++ b/src/main/resources/templates/buyPNRTickets.html
@@ -519,7 +519,7 @@
                         </div>
                         <div class="detail-item">
                             <i class="fas fa-rupee-sign"></i>
-                            <strong> Price:</strong> ₹<span th:text="${passenger.price}"></span>
+                            <strong> Price:</strong> ₹<span th:text="${passenger.price + extraFee}"></span>
                         </div>
                         <div class="detail-item">
                             <strong>Document:</strong>
