--- a/src/main/resources/templates/myPurchasedTickets1.html
+++ b/src/main/resources/templates/myPurchasedTickets1.html
@@ -380,7 +380,7 @@
                 
                 <div class="ticket-footer">
                     <div class="price">
-                        ₹<span th:text="${passenger.price + passenger.adminFee}"></span>
+                        ₹<span th:text="${passenger.buyerPaid}"></span>
                     </div>
                     
                     <div class="actions">
