--- a/src/main/resources/templates/adminFee.html
+++ b/src/main/resources/templates/adminFee.html
@@ -139,7 +139,13 @@
         <label for="referralDiscount" class="form-label">Referral Discount (₹)</label>
         <input type="number" step="0.01" name="referralDiscount" class="form-control" th:value="${referralDiscount}" required>
     </div>
-
+	
+	 <!-- Extra Fee Field -->
+    <div class="mb-3">
+        <label for="extraFee" class="form-label">Extra Fee (₹)</label>
+        <input type="number" step="0.01" name="extraFee" class="form-control" th:value="${extraFee}" required>
+    </div>
+    
     <!-- Submit Button -->
     <div class="d-flex flex-wrap align-items-center">
         <button type="submit" class="btn btn-success me-2">Update Settings</button>
