--- a/src/main/resources/templates/adminViewTickets.html
+++ b/src/main/resources/templates/adminViewTickets.html
@@ -295,6 +295,7 @@
             <table>
                 <thead>
                     <tr>
+                        <th><span class="emoji">📄</span> PNR</th>
                         <th><i class="fas fa-user"></i> Passenger</th>
                         <th><i class="fas fa-birthday-cake"></i> Age</th>
                         <th><i class="fas fa-venus-mars"></i> Gender</th>
@@ -307,8 +308,9 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr th:each="passenger : ${passengers}">
-                        <td th:text="${passenger.name}">Name</td>
+                	<tr th:each="passenger : ${passengers}">
+                        <td th:text="${passenger.pnr.pnrNumber}">PNR12345</td>
+                    	<td th:text="${passenger.name}">Name</td>
                         <td th:text="${passenger.age}">Age</td>
                         <td th:text="${passenger.gender}">Gender</td>
                         <td th:text="${passenger.coach}">Coach</td>
